[gd_scene load_steps=5 format=3 uid="uid://b8bt0u45oqhe6"]

[ext_resource type="Script" path="res://Scripts/Objects/Lava.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bf6cekji71vif" path="res://Graphics/Items/MonitorIcons.png" id="4_35bna"]

[sub_resource type="RectangleShape2D" id="2"]
resource_local_to_scene = true
size = Vector2(31, 31)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 32)

[node name="Lava" type="Area2D"]
z_index = 30
collision_layer = 0
collision_mask = 4096
script = ExtResource("2")
damageType = 1

[node name="Collision" type="StaticBody2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
modulate = Color(1, 0, 0, 0.584314)
shape = SubResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(1, 0, 0, 0.584314)
shape = SubResource("1")

[node name="TopLeft" type="Sprite2D" parent="."]
position = Vector2(-16, -16)
texture = ExtResource("4_35bna")
centered = false
hframes = 11
vframes = 2
frame = 15

[node name="TopRight" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("4_35bna")
centered = false
hframes = 11
vframes = 2
frame = 15

[node name="BottomLeft" type="Sprite2D" parent="."]
position = Vector2(-16, 0)
texture = ExtResource("4_35bna")
centered = false
hframes = 11
vframes = 2
frame = 15

[node name="BottomRight" type="Sprite2D" parent="."]
texture = ExtResource("4_35bna")
centered = false
hframes = 11
vframes = 2
frame = 15

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
